--- a/CS112bAndroid/res/layout/activity_main.xml
+++ b/CS112bAndroid/res/layout/activity_main.xml
@@ -19,21 +19,7 @@
         android:orientation="vertical" >
 
         // contains the grid
-        <GridView
-            android:id="@+id/gridView1"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:numColumns="12"
-            android:numRows="12"
-            android:columnWidth="23dp"
-            android:rowWidth="23dp"
-            
-             >
-            
-            
-            
-            
-        </GridView>
+  
 
         
         
@@ -45,25 +31,25 @@
     // contains the buttons
 
     <LinearLayout
-        android:layout_width="260"
-        android:layout_height="100"
+        android:layout_width="260dp"
+        android:layout_height="100dp"
         android:orientation="vertical" >
 
         <LinearLayout
-            android:layout_width="260"
-            android:layout_height="50" >
+            android:layout_width="260dp"
+            android:layout_height="50dp" >
 
             <Button
                 android:id="@+id/button1"
                 style="?android:attr/buttonStyleSmall"
-                android:layout_width="130"
+                android:layout_width="130dp"
                 android:layout_height="wrap_content"
                 android:text="Hit" />
 
             <Button
                 android:id="@+id/button2"
                 style="?android:attr/buttonStyleSmall"
-                android:layout_width="130"
+                android:layout_width="130dp"
                 android:layout_height="wrap_content"
                 android:text="Miss" />
 
@@ -71,41 +57,41 @@
         </LinearLayout>
 
         <LinearLayout
-            android:layout_width="260"
-            android:layout_height="50" >
+            android:layout_width="260dp"
+            android:layout_height="50dp" >
 
             <Button
                 android:id="@+id/button4"
                 style="?android:attr/buttonStyleSmall"
-                android:layout_width="50"
+                android:layout_width="50dp"
                 android:layout_height="wrap_content"
                 android:text="2" />
 
             <Button
                 android:id="@+id/button5"
                 style="?android:attr/buttonStyleSmall"
-                android:layout_width="50"
+                android:layout_width="50dp"
                 android:layout_height="wrap_content"
                 android:text="3" />
 
             <Button
                 android:id="@+id/button6"
                 style="?android:attr/buttonStyleSmall"
-                android:layout_width="50"
+                android:layout_width="50dp"
                 android:layout_height="wrap_content"
                 android:text="3" />
 
             <Button
                 android:id="@+id/button7"
                 style="?android:attr/buttonStyleSmall"
-                android:layout_width="50"
+                android:layout_width="50dp"
                 android:layout_height="wrap_content"
                 android:text="4" />
 
             <Button
                 android:id="@+id/button8"
                 style="?android:attr/buttonStyleSmall"
-                android:layout_width="50"
+                android:layout_width="50dp"
                 android:layout_height="wrap_content"
                 android:text="5" />
             
