--- a/CS112bAndroid/res/layout/activity_main.xml
+++ b/CS112bAndroid/res/layout/activity_main.xml
@@ -992,4 +992,18 @@
         </LinearLayout>
     </LinearLayout>
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical" >
+
+        <Button
+            android:id="@+id/button3"
+            style="?android:attr/buttonStyleSmall"
+            android:layout_width="260dp"
+            android:layout_height="50dp"
+            android:text="Restart" />
+    
+    </LinearLayout>
+
 </LinearLayout>
